# siegel

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  ProjectHome.md  README  aclocal.m4  configure  configure.ac  doxygen.cfg
m4/: ax_use_gmpxx.m4
src/: Makefile.am  Makefile.in  config.h.in  initialization.hpp  main.cpp  main_candidate_list.cpp  template.hpp
src/engine/: cusp_candidates_engine.hpp  cusp_engine.hpp  cusp_selector.hpp  cusp_sieve.hpp  cusp_validator.hpp  siegel_engine.hpp
src/engine/iterators/: cusp_selector_iterator.hpp
src/exceptions/: bad_vector_input.hpp
src/geometry/algorithms/: make_siegel.hpp  make_siegel.hpp~
src/geometry/effect/: cube_phi.hpp  effect.hpp  effect_linear.hpp  effect_linear_reference.hpp  minimize_effect.hpp  minimize_effect.hpp~  point_phi.hpp
src/geometry/measure/: euclidean_measure.hpp  interval_measure.hpp  measure.hpp  region_measure.hpp
src/structure/numerical/: iq_field.hpp  iq_ideal.hpp  iq_number.hpp
src/utility/: pause.hpp  precision.hpp
src/utility/algorithms/: copy_member.hpp  fill_member.hpp  mutate.hpp
src/utility/functors/: empty_functor.hpp  location_builder.hpp  mem_fun_adaptor.hpp  stream_cast.hpp  stream_cast_tuple.hpp
src/utility/io/: container_to_string.hpp  string_parser.hpp  string_to_array.hpp  string_to_container.hpp
src/utility/math/: abs.hpp  ceil.hpp  comparison.hpp  congruence_equation.hpp  congruence_system.hpp  conjugate_multiply.hpp  floor.hpp  gcd.hpp  hermitian_inner_product.hpp  hermitian_quadratic_product.hpp  iq_conjugate_multiply.hpp  is_equal.hpp  is_equal_cx.hpp  (+18 more)
(+45 files in other folders)
